tests/golden/errors/char-invalid.nv
fn main() {
    print(char(-1))
}
